--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,5 @@
 /tmp/*
 /logs/*
 /bower_components/*
-.idea/
-composer.lock
+.idea/*
 config/.env
-webroot/css/bootstrap/
-webroot/css/fonts/
-webroot/js/bootstrap/
-webroot/js/jquery/
