--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "fish-diary",
   "homepage": "https://github.com/makallio85/fish-diary",
   "authors": [
-    "Marko Kallio <marko.kallio@suomenpt.fi>"
+    "Marko Kallio <makallio85@gmail.com>"
   ],
   "description": "",
   "main": "",
